# Kontrol2OBS

./: CMakeLists.txt
src/: board-controller.cpp  board-controller.h  events.cpp  events.h  kontrol2obs.cpp  kontrol2obs.h  obs-controller.cpp  obs-controller.h  plugin-main.c  plugin-main.cpp  plugin-main.h
src/forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
